# python-courses

./: README.md  setup.cfg
pycourses/: GIT.md
pycourses/decorators/: class_decorators.py  function_decorators.ipynb
pycourses/general/: README.md
pycourses/hdf5/: How2HDFwPy.ipynb  working_with_hdf5.ipynb
pycourses/misc/: function_and_classes.ipynb
