[metadata]
name = pycourses
version = 0.0.0
author = Matthias Probst
author_email = matth.probst@gamil.com
description = Collection of python courses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/python-courses
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = !=3.8
include_package_data = True
install_requires =
    jupyterlab

[options.extras_require]
hdf5 =
    h5py
    jupyterlab_h5web
    numpy

complete =
    %(hdf5)s

